[tool.black]
line-length = 120

[tool.poetry]
name = "pyprobml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
numpy = "^1.23.5"
requests = "^2.31.0"
scipy = "^1.12.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
h5py = "^3.10.0"
pandas = "^2.2.1"
graphviz = "^0.20.1"
arviz = "^0.17.0"
pyyaml = "^6.0.1"
probml-utils = { path = "../probml-utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
